# 6502Emulator

./: .gitignore  CMakeLists.txt  README.md
6502/6502Lib/: CMakeLists.txt
6502/6502Lib/src/private/: m6502.cpp
6502/6502Lib/src/public/: m6502.h
6502/6502Run/: CMakeLists.txt
6502/6502Run/src/: main_6502.cpp
6502/6502Test/: CMakeLists.txt
